--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -41,7 +41,7 @@
                 <input type="password" id="password" name="password" class="form-control mb-4" th:placeholder="Hasło">
 
                 <!-- Sign in button -->
-                <button class="btn btn-info btn-block my-4" type="submit">Zaloguj</button>
+                <button class="btn blue text-white btn-block my-4" type="submit">Zaloguj</button>
 
 
                 <div class="d-flex justify-content-around">
@@ -53,7 +53,6 @@
                         <a th:href="@{/registration}">Zarejestruj</a>
                     </div>
                 </div>
-
             </form>
         </div>
     </div>
