--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -54,7 +54,7 @@
                 <label th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="validation-message"></label>
 
                 <!-- Sign up button -->
-                <button class="btn btn-info my-4 btn-block" type="submit">Sign in</button>
+                <button class="btn blue my-4 btn-block text-white" type="submit">Zarejestruj</button>
 
                 <hr>
 
