--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -20,10 +20,12 @@
 	<link rel="stylesheet" th:href="@{/css/addons/datatables.min.css}"/>
 	<!-- DataTables JS -->
 	<script rel="stylesheet" th:href="@{/js/addons/datatables.min.js}" ></script>
+	<link href="https://fonts.googleapis.com/css?family=Ubuntu:300,300i,400,400i,500,500i,700,700i&display=swap" rel="stylesheet">
+
 </head>
 <body>
 <!--Navbar -->
-<nav class="mb-1 navbar navbar-expand-lg navbar-dark blue lighten-1" th:fragment="header">
+<nav class="navbar navbar-expand-lg navbar-dark blue lighten-1" th:fragment="header">
 	<a class="navbar-brand" href="#">On The Way</a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-555"
 			aria-controls="navbarSupportedContent-555" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,7 +33,7 @@
 	</button>
 	<div class="collapse navbar-collapse " id="navbarSupportedContent-555">
 		<ul class="navbar-nav ml-auto">
-			<li class="nav-item" sec:authorize="isAnonymous()">
+			<li class="nav-item">
 				<a class="nav-link" th:href="@{/}">Home
 					<span class="sr-only">(current)</span>
 				</a>
