--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -56,12 +56,12 @@
 			<li class="nav-item" sec:authorize="isAuthenticated()">
 				<a class="nav-link" th:href="@{/logout}">Wyloguj</a>
 			</li>
-			<li class="nav-item">
+			<li class="nav-item" sec:authorize="isAuthenticated()">
 				<a class="nav-link waves-effect waves-light" th:href="@{/notification/invitations}">1
 					<i class="fas fa-envelope"></i>
 				</a>
 			</li>
-			<li class="nav-item avatar">
+			<li class="nav-item avatar" sec:authorize="isAuthenticated()">
 				<a class="nav-link p-0" th:href="@{/profile}">
 					<img src="https://mdbootstrap.com/img/Photos/Avatars/avatar-5.jpg" class="rounded-circle z-depth-0"
 						 alt="avatar image" height="35">
